# steamdb-mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.json  pyproject.toml  pyvenv.cfg
.github/workflows/: publish.yml
steamdb_mcp/: __init__.py  __main__.py  server.py
