[project]
name = "steamdb-mcp"
version = "0.1.0"
description = "MCP server for Steam & SteamDB data — game search, player counts, price tracking, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Irfan Maulana"},
]
keywords = ["mcp", "steam", "steamdb", "games", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "mcp>=1.20",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.scripts]
steamdb-mcp = "steamdb_mcp.server:main"

[project.urls]
Homepage = "https://github.com/irfanmaulanaak/steamdb-mcp"
Repository = "https://github.com/irfanmaulanaak/steamdb-mcp"
Issues = "https://github.com/irfanmaulanaak/steamdb-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["steamdb_mcp"]
